# Scalpers-Today-Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  setup.py  startup.sh
.github/workflows/: ci.yml  deploy-azure.yml  main_scalpertoday-ruben.yml  refresh-events.yml
alembic/: env.py
alembic/versions/: 3de8543205ef_initial_schema.py  4d9d79c8b8ee_rename_economic_events_columns_to_english.py
docs/: API_REFERENCE.md  DOCUMENTACION_PROYECTO_DAM.md
scripts/: startup.sh
src/scalper_today/: __init__.py  __main__.py  config.py
src/scalper_today/api/: alert_routes.py  app.py  auth_routes.py  exception_handlers.py  routes.py
src/scalper_today/domain/: __init__.py
src/scalper_today/infrastructure/: __init__.py
tests/: conftest.py
tests/api/: test_alerts_and_tokens.py  test_alerts_security.py  test_assistant_routes.py  test_auth_google.py  test_auth_routes.py  test_auth_security.py  test_container_week_events.py  test_events_extended.py  test_routes.py
tests/domain/entities/: test_economic_event.py
tests/domain/usecases/: test_alerts.py  test_backfill_event_analysis.py  test_event_filter.py  test_get_daily_briefing.py  test_get_home_summary.py  test_macro_events.py  test_week_events.py
tests/infrastructure/: test_ai_analyzer.py  test_notification_scheduler.py  test_providers_integration.py  test_retry_logic.py
tests/infrastructure/providers/: test_fmp_calendar_provider.py  test_forexfactory_calendar_provider.py  test_rapidapi_calendar_provider.py  test_tradingeconomics_calendar_provider.py
(+210 files in other folders)
